--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ball Me</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <!-- Two divs wrapping the canvas to center and auto resize it -->
