--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       </div>
     </div>
     <!-- <div id="h"></div> -->
-    <script src="brain.js"></script>
-    <script src="computer.js"></script>
+    <!-- <script src="brain.js"></script>
+    <script src="computer.js"></script> -->
     <script src="index.js"></script>
   </body>
 </html>
